<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/txtname"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/txtmt"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/txtname"
        app:layout_constraintTop_toBottomOf="@+id/txtname" />

    <TextView
        android:id="@+id/txtstid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="100dp"
        android:text="@string/txtstid"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txtmt"
        app:layout_constraintTop_toBottomOf="@+id/txtmt" />

    <Button
        android:id="@+id/btnnext"
        android:layout_width="187dp"
        android:layout_height="79dp"
        android:layout_marginBottom="132dp"
        android:text="@string/btnnext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>